--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -78,6 +78,7 @@
         </div>
     </section>
 
+    
     {% comment %} event section {% endcomment %}
     <section id="events" class="py-8">
     <div class="container mx-auto px-4">
@@ -96,26 +97,29 @@
         </div>
         <div class="events-list grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             {% comment %} card start {% endcomment %}
-            <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
+
+            {% for event in events %}
+                 <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
         <img src="{% static 'image/event.jpg' %}" alt="Event 1" class="w-full h-48 object-cover">
         <div class="p-4">
-            <h3 class="text-xl font-bold text-gray-800">Music Concert</h3>
-            <h4 class="text-md text-gray-600">Live Performance</h4>
+            <h3 class="text-xl font-bold text-gray-800">{{event.name}}</h3>
+            <h4 class="text-md text-gray-600">{{event.description}}</h4>
             <p class="text-gray-600 font-semibold flex items-center mt-2">
                 <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zM12 11a2 2 0 110-4 2 2 0 010 4z"></path>
                 </svg>
-                New York
+                {{event.location}}
             </p>
             <p class="text-gray-600 font-semibold flex items-center mt-2">
                 <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                 </svg>
-                7:00 PM, 25th Dec
+                {{event.time}} {{event.date}}
             </p>
-            <p class="text-gray-600 font-semibold mt-2">Category: <span class="text-gray-800">Music</span></p>
-            <p class="text-gray-600 font-semibold mt-2">Participate: <span class="text-gray-800">150</span></p>
-            <p class="text-gray-600 font-semibold mt-2">View Count: <span class="text-gray-800">1200</span></p>
+            <p class="text-gray-600 font-semibold mt-2">Category: <span class="text-gray-800">{{event.category.name}}</span></p>
+            <p class="text-gray-600 font-semibold mt-2">Participate:{% for par in event.participant.all %}
+                     <span class="text-gray-800">{{par}}</span>
+                {% endfor %}</p>
         </div>
         <div class="p-4 flex justify-between">
             <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
@@ -126,6 +130,8 @@
             </button>
         </div>
     </div>
+            {% endfor %}
+           
             {% comment %} card end {% endcomment %}
         </div>
     </div>
