--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -87,19 +87,18 @@
             <p class="text-gray-600 mt-2">Discover all the amazing events we have to offer</p>
         </div>
         <div class="filter-search mb-6 flex justify-between items-center">
-            <input type="text" id="search" placeholder="Search events..." class="border rounded px-4 py-2 w-1/3">
-            <select id="filter" class="border rounded px-4 py-2">
-                <option value="all">All</option>
-                <option value="upcoming">Upcoming</option>
-                <option value="past">Past</option>
-            </select>
-            <button class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded">Search</button>
+            <form method="GET" action="{% url 'home' %}" class="flex w-full">
+        <input type="text" name="q" id="search" placeholder="Search events..." class="border rounded px-4 py-2 w-1/3" value="{{ query }}">
+        <button type="submit" class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded ml-2">Search</button>
+    </form>
         </div>
         <div class="events-list grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             {% comment %} card start {% endcomment %}
 
+            {% if message %}
+            <p class="text-red-500">Event Not Found,Search with Name,Category and Location</p>{% endif %}
             {% for event in events %}
-                 <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
+        <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
         <img src="{% static 'image/event.jpg' %}" alt="Event 1" class="w-full h-48 object-cover">
         <div class="p-4">
             <h3 class="text-xl font-bold text-gray-800">{{event.name}}</h3>
@@ -122,12 +121,14 @@
                 {% endfor %}</p>
         </div>
         <div class="p-4 flex justify-between">
-            <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
+           <a href="{% url "event_details" event.id %}">
+             <button class="bg-[#4F46E5] text-white hover:text-[#4F46E5] py-2 px-4 rounded hover:bg-indigo-200 transition duration-300 flex items-center">
                 <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H9m0 0l3-3m-3 3l3 3"></path>
                 </svg>
                 View Details
             </button>
+           </a>
         </div>
     </div>
             {% endfor %}
