--- a/events/templates/dashboard/dashboard.html
+++ b/events/templates/dashboard/dashboard.html
@@ -15,53 +15,47 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
             <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-users"></i> Total Participants</h2>
-                <p class="text-3xl text-gray-800">{{total_event}}</p>
+                <p class="text-3xl text-gray-800">{{total_participant}}</p>
             </div>
-            <div class="bg-indigo-200 p-6 rounded shadow">
+            <a href="{% url 'dashboard' %}?type=total-event">
+                <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-calendar-alt"></i> Total Events</h2>
                 <p class="text-3xl text-gray-800">{{total_event}}</p>
             </div>
+            </a>
             <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-calendar-check"></i> Upcoming Events</h2>
-                <p class="text-3xl text-gray-800">10</p>
+                <p class="text-3xl text-gray-800">{{total_event}}</p>
             </div>
             <div class="bg-indigo-200 p-6 rounded shadow">
                 <h2 class="text-2xl font-semibold text-[#4F46E5]"><i class="fas fa-calendar-times"></i> Past Events</h2>
-                <p class="text-3xl text-gray-800">40</p>
+                <p class="text-3xl text-gray-800">{{total_event}}</p>
             </div>
         </div>
-        <div class=" p-6 rounded shadow">
+        <div class="bg-indigo-50 p-6 rounded shadow">
             <h2 class="text-2xl font-semibold mb-6 text-[#4F46E5]">Today's Events</h2>
-            <table class="min-w-full bg-white">
-                <thead>
-                    <tr class="bg-gray-200">
-                        <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Event Name</th>
-                        <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Category</th>
-                        <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Date</th>
-                        <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Location</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr class="hover:bg-gray-100">
-                        <td class="py-3 px-4 border-b border-gray-300">Event 1</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Category 1</td>
-                        <td class="py-3 px-4 border-b border-gray-300">2023-10-01</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Location 1</td>
-                    </tr>
-                    <tr class="hover:bg-gray-100">
-                        <td class="py-3 px-4 border-b border-gray-300">Event 2</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Category 2</td>
-                        <td class="py-3 px-4 border-b border-gray-300">2023-10-01</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Location 2</td>
-                    </tr>
-                    <tr class="hover:bg-gray-100">
-                        <td class="py-3 px-4 border-b border-gray-300">Event 3</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Category 3</td>
-                        <td class="py-3 px-4 border-b border-gray-300">2023-10-01</td>
-                        <td class="py-3 px-4 border-b border-gray-300">Location 3</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="overflow-x-auto">
+                <table class="min-w-full bg-white">
+                    <thead>
+                        <tr class="bg-indigo-200">
+                            <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Event Name</th>
+                            <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Category</th>
+                            <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Date</th>
+                            <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Location</th>
+                        </tr>
+                    </thead>
+                    {% for event in all_events %}
+                    <tbody>
+                        <tr class="bg-indigo-50 hover:bg-indigo-200">
+                            <td class="py-3 px-4 border-b border-gray-300">{{event.name}}</td>
+                            <td class="py-3 px-4 border-b border-gray-300">{{event.category.name}}</td>
+                            <td class="py-3 px-4 border-b border-gray-300">{{event.date}}</td>
+                            <td class="py-3 px-4 border-b border-gray-300">{{event.location}}</td>
+                        </tr>
+                    </tbody>
+                    {% endfor %}
+                </table>
+            </div>
         </div>
     </div>
 </body>
