--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -40,8 +40,12 @@
                          </div>
                         </div>
                     <div class="hidden sm:ml-6 sm:flex sm:items-center">
-                    <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
-                    <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button>
+                        <a href="{% url "create-event" %}">
+                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+
+                        </a>
+                        <a href="{% url "dashboard" %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button></a>
                 </div>
                 <div class="-mr-2 flex items-center sm:hidden">
                 <button id="mobile-menu-button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500">
@@ -96,7 +100,7 @@
             {% comment %} card start {% endcomment %}
 
             {% if message %}
-            <p class="text-red-500">Event Not Found,Search with Name,Category and Location</p>{% endif %}
+            <p class="text-red-500">Event Not Found.Search with Name and Location</p>{% endif %}
             {% for event in events %}
         <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
         <img src="{% static 'image/event.jpg' %}" alt="Event 1" class="w-full h-48 object-cover">
