--- a/events/templates/create/create_cate.html
+++ b/events/templates/create/create_cate.html
@@ -22,7 +22,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="bg-indigo-500 text-white px-4 py-2 mt-2 rounded">create</button>
+        <button type="submit" class="bg-indigo-500 text-white px-4 py-2 mt-2 rounded">Submit</button>
     </form>
    </div>
 </body>
