--- a/events/templates/create/create_cate.html
+++ b/events/templates/create/create_cate.html
@@ -19,6 +19,12 @@
                 </a>
                 </div>
             </div>
+            <div>
+                {% if messages %}
+                {% for message in messages %}
+                <p class="text-green-500 text-xl">{{message}}</p>
+                {% endfor %}{% endif %}
+            </div>
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
