--- a/events/templates/create_event/create_event.html
+++ b/events/templates/create_event/create_event.html
@@ -23,6 +23,22 @@
                 <a href="{% url "create-participant" %}">
                  <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Create Participants</button></a>
                 </div>
+
+                 <div>
+    {% if messages %}
+        {% for message in messages %}
+            <p class="
+                {% if message.tags == 'error' %}
+                    text-red-500
+                {% elif message.tags == 'success' %}
+                    text-green-500
+                {% endif %} 
+                text-xl">
+                {{ message }}
+            </p>
+        {% endfor %}
+    {% endif %}
+</div>
         </div>
     <form method="POST">
         {% csrf_token %}
