--- a/events/templates/dashboard/dashboard.html
+++ b/events/templates/dashboard/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 </head>
 <body>
     <div class="container mx-auto mt-8">
@@ -45,6 +46,7 @@
                             <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Category</th>
                             <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Date</th>
                             <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Location</th>
+                            <th class="py-3 px-4 border-b-2 border-gray-300 text-left text-lg leading-4 text-gray-600">Actions</th>
                         </tr>
                     </thead>
                     {% for event in all_events %}
@@ -54,12 +56,54 @@
                             <td class="py-3 px-4 border-b border-gray-300">{{event.category.name}}</td>
                             <td class="py-3 px-4 border-b border-gray-300">{{event.date}}</td>
                             <td class="py-3 px-4 border-b border-gray-300">{{event.location}}</td>
-                        </tr>
+                            <td class="py-3 px-4 border-b border-gray-300">
+                                <a  class="text-indigo-500 hover:text-indigo-700">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                                <a href="#" class="text-indigo-500 hover:text-indigo-700 ml-4" onclick="openModal('{{ event.id }}')">
+                                    <i class="fas fa-trash-alt"></i>
+                                </a>
+                            </td>
+                            </tr>
                     </tbody>
                     {% endfor %}
                 </table>
             </div>
         </div>
     </div>
+
+    <div id="deleteModal" class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+        <div class="bg-white p-6 rounded shadow-lg">
+            <h2 class="text-xl font-semibold mb-4">Confirm Deletion</h2>
+            <p>Are you sure you want to delete this event?</p>
+            <div class="mt-4 flex justify-end">
+                <button class="bg-gray-300 text-gray-700 px-4 py-2 rounded mr-2" onclick="closeModal()">Cancel</button>
+                <form id="deleteForm" method="POST" action="">
+                    {% csrf_token %}
+                    <button type="submit" class="bg-red-500 text-white px-4 py-2 rounded">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script>
+        function openModal(eventId) {
+            document.getElementById('deleteForm').action = '{% url "delete_event" 0 %}'.replace('0', eventId);
+            document.getElementById('deleteModal').classList.remove('hidden');
+        }
+
+        function closeModal() {
+            document.getElementById('deleteModal').classList.add('hidden');
+        }
+
+         {% if messages %}
+            {% for message in messages %}
+                toastr.success("{{ message }}");
+            {% endfor %}
+        {% endif %}
+    </script>
 </body>
 </html>
