--- a/events/templates/admin/user_list.html
+++ b/events/templates/admin/user_list.html
@@ -25,36 +25,23 @@
       </thead>
       <tbody class="divide-y divide-gray-300 bg-indigo-50">
         <!-- Example static data -->
-        <tr class="hover:bg-indigo-200">
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">1</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">John Doe</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">johndoe@example.com</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">12345</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">Admin</td>
+        {% for user in users %}
+          <tr class="hover:bg-indigo-200">
+          <td class="px-4 py-4 whitespace-nowrap text-gray-800">{{forloop.counter}}</td>
+          <td class="px-4 py-4 whitespace-nowrap text-gray-800">{{user.first_name}} {{user.last_name}} </td>
+          <td class="px-4 py-4 whitespace-nowrap text-gray-800">{{user.email}}</td>
+          <td class="px-4 py-4 whitespace-nowrap text-gray-800">{{user.id}}</td>
+          <td class="px-4 py-4 whitespace-nowrap text-gray-800">{{user.group_name}}</td>
           <td class="px-4 py-4 whitespace-nowrap">
             <a
-              href="{% url 'assign-role' %}"
+              href="{% url 'assign-role' user.id %}"
               class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded"
             >
               Change Role
             </a>
           </td>
         </tr>
-        <tr class="hover:bg-indigo-200">
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">2</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">Jane Smith</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">janesmith@example.com</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">67890</td>
-          <td class="px-4 py-4 whitespace-nowrap text-gray-800">Editor</td>
-          <td class="px-4 py-4 whitespace-nowrap">
-            <a
-              href="assign-role.html?id=67890"
-              class="bg-[#4F46E5] hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded"
-            >
-              Change Role
-            </a>
-          </td>
-        </tr>
+        {% endfor %}
       </tbody>
     </table>
   </div>
