--- a/events/templates/create_event/create_event.html
+++ b/events/templates/create_event/create_event.html
@@ -4,15 +4,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Event</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="{% static 'css/output.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
+<body class="bg-[#f3f4f6] text-[#1F2937]">
+
+  <header>
+      {% comment %} navbar {% endcomment %}
+     <nav class="bg-white shadow-lg">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16 items-center">
+                <div class="flex">
+                  <div class="flex-shrink-0 flex items-center">
+                    <a href="{% url 'home' %}" class="text-2xl font-bold text-[#4F46E5]">Event Management</a>
+                    </div>
+                    <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
+                    <a href="{% url 'home' %}" class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5]">Home</a>                    <div class="relative group items-center">
+                        <button class="text-gray-900 inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium hover:border-[#4F46E5] focus:outline-none">
+                            Events
+                            <svg class="ml-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                                <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
+                            </svg>
+                        </button>
+                         <div class="absolute mt-2 w-48 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 hidden group-hover:block">
+                             <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+                                <a href="{% url 'dashboard' %}?type=upcoming" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Upcoming Events</a>
+                                <a href="{% url 'dashboard' %}?type=pending" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">Past Events</a>
+                                <a href="{% url 'dashboard' %}?type=total-event" class="block px-4 py-2 text-sm text-gray-700 hover:bg-[#E0E7FF] hover:text-[#4F46E5]" role="menuitem">All Events</a>
+                                </div>
+                            </div>
+                        </div>
+                         </div>
+                        </div>
+                        {% if user.is_authenticated %}
+                            <div class="hidden sm:ml-6 sm:flex sm:items-center">
+                                    <a href="{% url 'create-event' %}">
+                                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+                                    </a>
+                                    <a href="{% url 'dashboard' %}">
+                                        <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button>
+                                    </a>
+                                    <form action="{% url 'sign-out' %}" method="POST">
+                                        {% csrf_token %}
+                                        <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Sign Out</button>
+                                    </form>
+                            </div>
+                            {% else %}
+                                <div class="hidden sm:ml-6 sm:flex sm:items-center">
+                        <a href="{% url 'sign-up' %}">
+                            <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Register</button>
+                        </a>
+                        <a href="{% url 'sign-in' %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Login</button>
+                        </a>
+                    </div>
+                        {% endif %}
+                    
+                <div class="-mr-2 flex items-center sm:hidden">
+                <button id="mobile-menu-button" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500">
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                    </svg>
+                </button>
+             </div>
+            </div>
+            </div>
+            <div id="mobile-menu" class="sm:hidden hidden">
+            <div class="pt-2 pb-3 space-y-1">
+            <a href="{% url 'home' %}" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Home</a>                <a href="{% url 'dashboard' %}?type=total-event" class="block pl-3 pr-4 py-2 border-l-4 border-transparent text-base font-medium text-gray-900 hover:border-[#4F46E5]">Events</a>
+            </div>
+            <div class="mb-2">
+                        <a href="{% url "create-event" %}">
+                        <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Event</button>
+
+                        </a>
+                        <a href="{% url "dashboard" %}">
+                            <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Dashboard</button></a>
+                </div>
+        </div>
+    </nav>
+  </header>
+
+   
+ <main>
+
    <div class="w-1/2 mx-auto mt-8">
     <div class="text-center mb-8">
             <h2 class="text-3xl font-bold text-gray-800">Create Events</h2>
-            <p class="text-gray-600 mt-2">Before Create Events you need to create Category and Participants first</p>
+            <p class="text-gray-600 mt-2">Before Create Events you need to create Category</p>
             <div class="mt-4">
                 <a href="{% url "home" %}">
                  <button class="bg-[#E0E7FF] text-indigo-500 px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Home</button>
@@ -20,8 +100,7 @@
                 <a href="{% url "create-category" %}">
                  <button class="bg-[#4F46E5] text-white px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-700">Create Category</button>
                 </a>
-                <a href="{% url "create-participant" %}">
-                 <button class="ml-4 bg-[#E0E7FF] text-[#4F46E5] px-3 py-2 rounded-md text-sm font-medium hover:bg-indigo-200">Create Participants</button></a>
+                
                 </div>
 
                  <div>
@@ -46,5 +125,18 @@
         <button type="submit" class="bg-indigo-500 text-white px-4 py-2 rounded">Submit</button>
     </form>
    </div>
+ </main>
+
+  
+
+    {% comment %} script toggle in mobile {% endcomment %}
+    <script>
+        const menuButton = document.getElementById('mobile-menu-button');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+         });
+    </script>
 </body>
 </html>
