RBAC fully implemented

--- a/events/templates/admin/group_list.html
+++ b/events/templates/admin/group_list.html
@@ -142,38 +142,23 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="odd:bg-white even:bg-indigo-50">
+            {% for group in groups %}
+              <tr class="odd:bg-white even:bg-indigo-50">
               <td class="border border-gray-300 px-4 py-2 font-medium">
-                Admins
+               {{group.name}}
               </td>
               <td class="border border-gray-300 px-4 py-2">
                 <ul class="list-disc list-inside">
-                  <li>Add User</li>
-                  <li>Delete User</li>
+                  {% for permission in group.permissions.all %}
+                        <li>{{permission.name}} ----- {{permission.codename}}</li>
+                      {% empty %}
+                        <span class="text-gray-500 italic">No permissions assigned</span>
+                  {% endfor %}
+                  
                 </ul>
               </td>
             </tr>
-            <tr class="odd:bg-white even:bg-indigo-50">
-              <td class="border border-gray-300 px-4 py-2 font-medium">
-                Editors
-              </td>
-              <td class="border border-gray-300 px-4 py-2">
-                <ul class="list-disc list-inside">
-                  <li>Edit Articles</li>
-                  <li>Publish Articles</li>
-                </ul>
-              </td>
-            </tr>
-            <tr class="odd:bg-white even:bg-indigo-50">
-              <td class="border border-gray-300 px-4 py-2 font-medium">
-                Viewers
-              </td>
-              <td class="border border-gray-300 px-4 py-2">
-                <span class="text-gray-500 italic"
-                  >No permissions assigned</span
-                >
-              </td>
-            </tr>
+            {% endfor %}
           </tbody>
         </table>
       </div>
