--- a/events/templates/profiles/pass_change.html
+++ b/events/templates/profiles/pass_change.html
@@ -99,10 +99,8 @@
       <form action="" method="POST" class="space-y-4">
           {% csrf_token %}
           {{form.as_p}}
-          <button type="submit" class="w-full px-6 py-2 bg-[#4F46E5] text-white rounded hover:bg-indigo-700">Log In</button>
+          <button type="submit" class="w-full px-6 py-2 bg-[#4F46E5] text-white rounded hover:bg-indigo-700">Change Password</button>
       </form>
-
-      <a href=" {% url 'password_reset' %} ">Forget Password!</a>
   </div>
 
    {% comment %} footer {% endcomment %}
